# ledboard

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  generic-gcc-avr.cmake
scad/: ws2812b_shield.scad  ws2812b_shield.stl  ws2812b_shield_v2.stl
src/: CMakeLists.txt  color.hpp  etl_profile.h  ledframe.cpp  main.cpp  palette.hpp  types.hpp
src/animation/: animation-modifiers.hpp  animation-runners.hpp  animation.hpp  rainbow_animation.hpp
src/animation/generators/: plain-color-animation.hpp  rainbow-animation.hpp
src/hal/: port.hpp  pwm.hpp  regs.hpp  traits.hpp  ws2812b.hpp
src/hal/cpu/: speed.h
